Use tomcat alpine image